--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="http://oss.maxcdn.com/jquery/2.2.1/jquery.js"></script>
 </head>
 <body>
+  <div class="float" id="float"></div>
   <div class="time-to-read-view" id="time-to-read-view">
   <h1>Welcome to my site </h1>
   <h3 class="reading-time"></h3>
