--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <link rel="stylesheet" href="styles.css">
   <script src="http://oss.maxcdn.com/jquery/2.2.1/jquery.js"></script>
 </head>
-<body>
-  <div class="float" id="float"></div>
+<body id="body">
   <div class="time-to-read-view" id="time-to-read-view">
   <h1>Welcome to my site </h1>
   <h3 class="reading-time"></h3>
